@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1006 2023/11/10 14:30:38 wiz Exp $
+# $NetBSD: Makefile,v 1.1007 2023/11/15 08:27:00 wiz Exp $
 #
 
 COMMENT=	Packages to support the X Window System
@@ -268,7 +268,6 @@ SUBDIR+=	p5-Tk
 SUBDIR+=	p5-Wx
 SUBDIR+=	p5-Wx-Perl-ProcessStream
 SUBDIR+=	p5-X11-Protocol
-SUBDIR+=	p5-gtk2
 SUBDIR+=	p5-gtk3
 SUBDIR+=	picom
 SUBDIR+=	pixman
