@@ -1,30 +1,0 @@
-# $NetBSD: Makefile,v 1.94 2023/11/14 14:03:18 wiz Exp $
-
-DISTNAME=	Gtk2-1.24993
-PKGNAME=	${DISTNAME:C:Gtk2:p5-gtk2:}
-PKGREVISION=	9
-CATEGORIES=	x11 perl5
-MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=gtk2-perl/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://gtk2-perl.sourceforge.net/
-COMMENT=	Perl bindings for GTK+ 2.0
-LICENSE=	gnu-lgpl-v2.1
-
-MAKE_JOBS_SAFE=		no
-
-DEPENDS+=	p5-ExtUtils-Depends>=0.300:../../devel/p5-ExtUtils-Depends
-DEPENDS+=	p5-ExtUtils-PkgConfig>=1.03:../../devel/p5-ExtUtils-PkgConfig
-
-USE_TOOLS+=	pkg-config
-
-PERL5_PACKLIST=	auto/Gtk2/.packlist
-
-BUILDLINK_API_DEPENDS.p5-glib2+=	p5-glib2>=1.280
-.include "../../devel/p5-glib2/buildlink3.mk"
-.include "../../graphics/p5-cairo/buildlink3.mk"
-BUILDLINK_API_DEPENDS.p5-pango+=	p5-pango>=1.220
-.include "../../devel/p5-pango/buildlink3.mk"
-.include "../../lang/perl5/module.mk"
-.include "../../x11/gtk2/buildlink3.mk"
-.include "../../mk/bsd.pkg.mk"
