@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.6994 2023/11/15 08:23:10 wiz Exp $
+$NetBSD: CHANGES-2023,v 1.6995 2023/11/15 08:27:00 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -10054,3 +10054,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Removed multimedia/dvdrip [wiz 2023-11-15]
 	Updated sysutils/intel-microcode-netbsd to 20231114 [msaitoh 2023-11-15]
 	Updated mail/clawsker to 1.3.7 [wiz 2023-11-15]
+	Removed x11/p5-gtk2 successor x11/p5-gtk3 [wiz 2023-11-15]
